study:zhx 9.8part of words

--- a/Criterion/work/每天需要做的事情.md
+++ b/Criterion/work/每天需要做的事情.md
@@ -8,7 +8,7 @@
 
 2. 整理单词，具体要求见本文件夹后续。
 3. 听力需要重复一句一句听，用纸抄写下来，用小站雅思，不要买课，他本身是免费的
-4. 每天用衡水体抄写一篇作文。
+4. 每天用**衡水体**抄写一篇作文。
 5. 手写打卡请转制成pdf后上传至个人文件夹
 
 案例请见EXAMPLE文件夹
